--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,23 @@
     <string name="action_settings">Settings</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="laoo">Local Assessment Operations Officer\n\nMunicipal Assessor\s Office</string>
+    <string name="laoo1">Local Assessment Operations Officer - I\n\nMunicipal Assessor\s Office</string>
+    <string name="laoo2">Local Assessment Operations Officer - II\n\nMunicipal Assessor\s Office</string>
+    <string name="laoo3">Local Assessment Operations Officer - III\n\nMunicipal Assessor\s Office</string>
+    <string name="mAssessor">Municipal Assessor\n\nMunicipal Assessor\s Office</string>
+    <string name="AC">Assessment Clerk\n\nMunicipal Assessor\s Office</string>
+    <string name="AC1">Assessment Clerk - I\n\nMunicipal Assessor\s Office</string>
+    <string name="AC2">Assessment Clerk - II\n\nMunicipal Assessor\s Office</string>
+    <string name="AC3">Assessment Clerk - III\n\nMunicipal Assessor\s Office</string>
+    <string name="AC2n3">Assessment Clerk - II\nAssessment Clerk - III\n\nMunicipal Assessor\s Office</string>
+    <string name="AC1n3">Assessment Clerk - I\nAssessment Clerk - III\n\nMunicipal Assessor\s Office</string>
+    <string name="AC1n3nRcc">Assessment Clerk - I\nAssessment Clerk - III\n\nMunicipal Assessor\s Office\n\nRevenue Collection Clerk\nMunicipal Treasurer\n\nMunicipal Treasurer\s Office</string>
+    <string name="tmAide">Tax Mapping Aide\n\nMunicipal Assessor\s Office</string>
+    <string name="rccnMt">Revenue Collection Clerk/\nMunicipal Treasurer\n\nMunicipal Treasurer\s Office</string>
+    <string name="mto">Municipal Treasurer\s Office</string>
+
+    <string name="classSimple">Simple</string>
+    <string name="classComplex">Complex</string>
+    <string name="classHighlyTechnical">Highly Technical</string>
 </resources>
